--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,11 @@
 name: nova
 channels:
-  - pytorch
   - defaults
 dependencies:
   - pip=21.2.4=py39h06a4308_0
   - python=3.9.7=h12debd9_1
-  - pytorch=1.10.1=py3.9_cpu_0
-  - pytorch-mutex=1.0=cpu
-  - torchaudio=0.10.1=py39_cpu
-  - torchvision=0.11.2=py39_cpu
   - pip:
+    - adjusttext==0.7.3
     - anndata==0.7.8
     - ipykernel==6.6.1
     - ipython==7.31.0
@@ -17,13 +13,21 @@ dependencies:
     - jupyter-core==4.9.1
     - jupyterlab-pygments==0.1.2
     - jupyterlab-widgets==1.0.2
-    - leidenalg==0.8.8
-    - louvain==0.7.1
     - matplotlib==3.5.1
     - matplotlib-venn==0.11.6
+    - numpy==1.20.3
     - pandas==1.3.5
+    - python-levenshtein==0.12.2
+    - pytorch-lightning==1.5.10
+    - requests==2.27.1
     - scanpy==1.8.2
     - scikit-learn==1.0.2
     - scipy==1.7.3
-    - scvi-tools==0.14.5
+    - scvi==0.6.8
+    - scvi-tools==0.15.2
     - seaborn==0.11.2
+    - statsmodels==0.13.1
+    - thefuzz==0.19.0
+    - torch==1.11.0+cu113
+    - torchaudio==0.11.0+cu113
+    - torchvision==0.12.0+cu113
